build_log_29.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/main.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:88:14: error: ‘void core::Application::requestTerrainReset(int)’ cannot be overloaded with ‘void core::Application::requestTerrainReset(int)’
   88 |         void requestTerrainReset(int warmupRadius = 1);
      |              ^~~~~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:87:14: note: previous declaration ‘void core::Application::requestTerrainReset(int)’
   87 |         void requestTerrainReset(int warmupRadius = 1);
      |              ^~~~~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:169:29: error: redeclaration of ‘float core::Application::vsyncOffFpsCap_’
  169 |     float vsyncOffFpsCap_ = 240.0f;
      |                             ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:168:11: note: previous declaration ‘float core::Application::vsyncOffFpsCap_’
  168 |     float vsyncOffFpsCap_ = 240.0f;
      |           ^~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:79: CMakeFiles/sisterapp.dir/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
